# k6a-optimizer

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  boot-completed.sh  customize.sh  module.prop  post-fs-data.sh  prepare_base_zip.sh  service.sh  system.prop  t source for CI build
.github/workflows/: Build.yml  build.yml
Webroot/: index.html
k6a-daemon/: Cargo.toml
k6a-daemon/.cargo/: config.toml
k6a-daemon/src/: main.rs
module/: index.html  module.prop  service.sh
update/: changelog.md  update.json
webroot/: index.html
